--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,9 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
+             echo '=== Inicializando banco de dados ===' &&
+             python init_db.py &&
+             echo '=== Servidor iniciando ===' &&
              daphne config.asgi:application --bind 0.0.0.0 --port 8000"
     volumes:
       - ./backend:/app
