--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,12 +42,15 @@
     "@angular/compiler-cli": "^15.1.6",
     "@types/jasmine": "~4.3.3",
     "@types/node": "^18.19.0",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.3.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "~4.9.5"
   }
 }
