--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^15.1.6",
     "@angular/platform-browser-dynamic": "^15.1.6",
     "@angular/router": "^15.1.6",
+    "chart.js": "^3.9.1",
     "primeicons": "6.0.1",
     "primeng": "15.4.1",
     "rxjs": "~7.8.1",
@@ -40,6 +41,7 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "^15.1.6",
     "@angular/compiler-cli": "^15.1.6",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.3",
     "@types/node": "^18.19.0",
     "autoprefixer": "^10.4.21",
