--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,36 @@
 services:
+  # Banco de dados PostgreSQL
   db:
     image: postgres:14
     container_name: front_hub_db
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-front_hub_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 10s
     networks:
       - backend_network
+    restart: unless-stopped
 
+  # Backend Django com Daphne (suporta WebSockets)
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: front_hub_backend
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "echo '=== Aguardando banco de dados ===' &&
+             sleep 2 &&
+             python manage.py migrate &&
              python manage.py collectstatic --noinput &&
              echo '=== Inicializando banco de dados ===' &&
              python init_db.py &&
@@ -38,14 +44,29 @@ services:
       - "${DJANGO_PORT:-8000}:8000"
     env_file:
       - .env
+    environment:
+      # Garantir que as variáveis estão disponíveis mesmo sem .env
+      POSTGRES_HOST: db
+      POSTGRES_DB: ${POSTGRES_DB:-front_hub_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
     depends_on:
       db:
         condition: service_healthy
+    healthcheck:
+      # Verifica se o servidor está respondendo (curl ou wget podem ser usados)
+      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:8000/api/')\" || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     networks:
       - backend_network
       - frontend_network
     restart: unless-stopped
 
+  # Frontend Angular com Nginx
   frontend:
     build:
       context: ./frontend
@@ -54,7 +75,15 @@ services:
     ports:
       - "${FRONTEND_PORT:-4200}:80"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
+    healthcheck:
+      # Verifica se o Nginx está respondendo na porta 80
+      test: ["CMD-SHELL", "if [ -f /var/run/nginx.pid ]; then exit 0; else exit 1; fi"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     networks:
       - frontend_network
     restart: unless-stopped
