Update health check command in Docker Compose for improved server response validation
- Modified health check to accept a 401 status code as a valid response, indicating the server is operational but requires authentication.
- Changed the health check command to use a dedicated Python script for better clarity and maintainability.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,8 +55,10 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      # Verifica se o servidor está respondendo (curl ou wget podem ser usados)
-      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:8000/api/')\" || exit 1"]
+      # Verifica se o servidor está respondendo
+      # Aceita código 401 (Unauthorized) como sucesso, pois indica que o servidor está funcionando
+      # e apenas requer autenticação, o que é o comportamento esperado
+      test: ["CMD", "python", "healthcheck.py"]
       interval: 30s
       timeout: 10s
       retries: 3
