--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,8 @@ channels>=4.0.0
 channels-redis>=4.2.0
 daphne>=4.0.0
 
+# Development dependencies
+coverage>=7.0.0
+flake8>=6.0.0
+flake8-docstrings>=1.6.0
+
