--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ django-cors-headers>=4.0.0
 channels>=4.0.0
 channels-redis>=4.2.0
 daphne>=4.0.0
+django-filter>=23.0
 
 # Development dependencies
 coverage>=7.0.0
