--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,9 @@
     "primeng": "15.4.1",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
