--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,8 @@ channels>=4.0.0
 channels-redis>=4.2.0
 daphne>=4.0.0
 django-filter>=23.0
+requests>=2.32.0
+websockets>=12.0
 
 # Development dependencies
 coverage>=7.0.0
