--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "semantic-release": "semantic-release",
-    "semantic-release:dry-run": "semantic-release --dry-run"
+    "semantic-release:dry-run": "semantic-release --dry-run",
+    "prepare": "husky install",
+    "commitlint": "commitlint --edit"
   },
   "prettier": {
     "printWidth": 100,
@@ -45,12 +47,15 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "^15.1.6",
     "@angular/compiler-cli": "^15.1.6",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.3",
     "@types/node": "^18.19.0",
     "autoprefixer": "^10.4.21",
+    "husky": "^8.0.3",
     "jasmine-core": "~5.3.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
