--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,33 @@ permissions:
   pull-requests: read
 
 jobs:
+  validate-commits:
+    name: Validate Commits
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        working-directory: ./frontend
+        run: npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+
+      - name: Validate commits
+        working-directory: ./frontend
+        run: |
+          npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
   lint-and-test:
     name: Lint and Test
     runs-on: ubuntu-latest
@@ -28,26 +55,29 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend
+        env:
+          CI: 'true'
+          HUSKY: '0'
         run: npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+
+      - name: Type check
+        working-directory: ./frontend
+        run: npm run type-check
 
       - name: Run linter
         working-directory: ./frontend
-        run: |
-          npm run lint || echo "Linter não configurado, pulando..."
-        continue-on-error: true
+        run: npm run lint
 
       - name: Run tests
         working-directory: ./frontend
         timeout-minutes: 10
-        run: |
-          npm test -- --watch=false --browsers=ChromeHeadless --code-coverage --no-progress || echo "Testes falharam, mas continuando..."
-        continue-on-error: true
+        run: npm test -- --watch=false --browsers=ChromeHeadless --code-coverage --no-progress
 
       - name: Upload coverage reports
         if: always()
@@ -56,6 +86,8 @@ jobs:
           directory: ./frontend/coverage
           flags: frontend
           name: frontend-coverage
+          fail_ci_if_error: false
+          verbose: true
         continue-on-error: true
 
   build:
@@ -69,12 +101,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install dependencies
         working-directory: ./frontend
+        env:
+          CI: 'true'
+          HUSKY: '0'
         run: npm ci --legacy-peer-deps || npm install --legacy-peer-deps
 
       - name: Build application
@@ -89,3 +124,4 @@ jobs:
           name: dist
           path: frontend/dist
           retention-days: 7
+
