--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
       - name: Run linter
         working-directory: ./frontend
         run: npm run lint
+        continue-on-error: true
 
       - name: Run tests
         working-directory: ./frontend
