--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,9 @@
     "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.3",
     "@types/node": "^18.19.0",
+    "angular-eslint": "20.6.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.39.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.3.0",
     "karma": "~6.4.3",
@@ -67,6 +69,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "typescript-eslint": "8.46.3"
   }
 }
